--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,22 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# CDK
+cdk.out/
+*.js
+*.d.ts
+node_modules/
+
+# Environment
+.env
+outputs.json
+
+# IDE
+.DS_Store
+.vscode/
+*.log
+
+# Python
+__pycache__/
+*.pyc
