--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/aws-lambda": "^8.10.136",
     "aws-cdk-lib": "^2.185.0",
     "constructs": "^10.0.0",
+    "esbuild": "^0.25.8",
     "source-map-support": "^0.5.21"
   }
 }
