--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "@types/aws-lambda": "^8.10.136",
     "aws-cdk-lib": "^2.185.0",
+    "aws-jwt-verify": "^4.0.1",
     "constructs": "^10.0.0",
     "esbuild": "^0.25.8",
     "source-map-support": "^0.5.21"
