--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@types/aws-lambda": "^8.10.136",
+    "@utcp/sdk": "^0.1.1",
     "aws-cdk-lib": "^2.185.0",
     "aws-jwt-verify": "^4.0.1",
     "constructs": "^10.0.0",
